Revision history for MooseX-Extreme

{{$NEXT}}

          - Support v5.20.0
          - Add github actions
          - Add postderef support
          - Trial support for `clone => 1`
          - Roles will now warn if a class overrides a role method without
            excluding it (in Moose, the class silently ignores the role method)
          - Add shortcuts for writer, clearer, builder, predicate
          - Role support added
          - make_immutable is now the default (thanks, haarg)
          - no need to add a true value to the end of your module (thanks, haarg)
          - Clean up and test mro setting (thanks, haarg!)
          - use MooseX::HasDefaults::RO to allow the RO default
          - Start building out a TODO wishlist in the POD
          - Add [CPANFile] Dist::Zilla plugin (thanks, Happy Barney)
          - First pass at experimental Moose version