@@ -3,10 +3,10 @@ severity = 4
 exclude = Freenode
 
 [TestingAndDebugging::RequireUseStrict]
-equivalent_modules = Test::Most MooseX::Extreme MooseX::Extreme::Role 
+equivalent_modules = Moose Test::Most MooseX::Extreme MooseX::Extreme::Role 
 
 [TestingAndDebugging::RequireUseWarnings]
-equivalent_modules = Test::Most MooseX::Extreme MooseX::Extreme::Role 
+equivalent_modules = Moose Test::Most MooseX::Extreme MooseX::Extreme::Role 
 
 [TestingAndDebugging::ProhibitNoWarnings]
 allow = experimental::signatures experimental::postderef
